--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "@types/react-dom": "^19",
     "eslint": "^9",
     "eslint-config-next": "15.5.5",
+    "shadcn": "^3.4.2",
     "tailwindcss": "^4",
     "typescript": "^5"
   }
